# mac

./: Makefile  README.md  decommission.yml  default.config.yml  pyproject.toml  setup.yml
scripts/: pre-requisites.sh
tasks/: checkout-repositories.yml  configure-tmux.yml  install-fonts.yml  install-mac-apps.yml  install-shell-apps.yml  setup-ansible.yml  setup-cli.yml  setup-productivity-apps.yml  setup-python.yml  test.yml  uninstall-mac-apps.yml  uninstall-productivity-apps.yml  uninstall-shell-apps.yml
